another fix to panel overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,6 @@
   background: none !important; }
 
 .panel-group .panel {
-  overflow: auto; }
+  overflow: visible !important; }
 
 /*# sourceMappingURL=styles.css.map */
